syntax = "proto3";

package ocf.cloud.grpcgateway.pb.v2;

import "github.com/plgd-dev/cloud/v2/resource-aggregate/pb/commands.proto";

option go_package = "github.com/plgd-dev/cloud/v2/grpc-gateway/pb;pb";

message CancelPendingCommandsRequest {
    ocf.cloud.resourceaggregate.pb.v2.ResourceId resource_id = 1;
    repeated string correlation_id_filter = 2; // empty array means all.
}

message CancelPendingCommandsResponse {
    repeated string correlation_ids = 1;
}

message CancelPendingMetadataUpdatesRequest {
    string device_id = 1;
    repeated string correlation_id_filter = 2;

}
